feat(sector-allocation): introduce currency handling in sector allocation services
refs: TMI-518